# Projet_CHP_2A

./: BiCGstab.cpp  BiCGstab.h  CHP  CMakeCache.txt  CMakeLists.txt  Concatrenation.cpp  Makefile  Matrice.cpp  Matrice.h  Readme.txt  fonctions.cpp  fonctions.h  param.txt  plot.txt  read.cpp  read.h
